[gd_scene load_steps=10 format=3 uid="uid://csgj6tukmkxpu"]

[ext_resource type="Script" path="res://UI/Contract/Component/Script/GD_UI_Contract.gd" id="1_3sfh0"]
[ext_resource type="Texture2D" uid="uid://dhevoipmptw4s" path="res://Assets/UI/Contract/test2.png" id="2_54kko"]
[ext_resource type="FontFile" uid="uid://d23nihmpuj0q8" path="res://Assets/Font/SF-Pro-Rounded-Regular.otf" id="3_c8pqy"]
[ext_resource type="Texture2D" uid="uid://chdi2jqbytxf" path="res://Assets/UI/Contract/tabler_sun-filled.svg" id="4_3pqyw"]
[ext_resource type="FontFile" uid="uid://b44qaa3hcljg3" path="res://Assets/Font/SF-Pro-Rounded-Medium.otf" id="5_gemf7"]
[ext_resource type="Texture2D" uid="uid://counuv34lumn1" path="res://Assets/UI/Contract/sell.svg" id="6_wcjl7"]
[ext_resource type="FontFile" uid="uid://c6plh0y06it7h" path="res://Assets/Font/SF-Pro-Rounded-Semibold.otf" id="10_xq4im"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_33vun"]
bg_color = Color(0.780392, 1, 0.560784, 1)
shadow_size = 4
shadow_offset = Vector2(4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j21ch"]
bg_color = Color(0.411765, 0.627451, 0.909804, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Contract" type="Control"]
custom_minimum_size = Vector2(380, 287)
layout_mode = 3
anchors_preset = 0
pivot_offset = Vector2(20, 20)
script = ExtResource("1_3sfh0")

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(380, 287)
layout_mode = 0
offset_right = 380.0
offset_bottom = 287.0
theme_override_styles/panel = SubResource("StyleBoxFlat_33vun")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 35.0
offset_right = 178.0
offset_bottom = 185.0
texture = ExtResource("2_54kko")

[node name="Description" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 35.0
offset_right = 336.0
offset_bottom = 208.0
alignment = 1

[node name="Deadline" type="VBoxContainer" parent="Description"]
layout_mode = 2

[node name="Label" type="Label" parent="Description/Deadline"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_c8pqy")
theme_override_font_sizes/font_size = 16
text = "Contract Deadline"

[node name="Container" type="HBoxContainer" parent="Description/Deadline"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 12
alignment = 1

[node name="Icon" type="TextureRect" parent="Description/Deadline/Container"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("4_3pqyw")

[node name="Value" type="Label" parent="Description/Deadline/Container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_gemf7")
theme_override_font_sizes/font_size = 64
text = "7"

[node name="Target" type="VBoxContainer" parent="Description"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="Description/Target"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_c8pqy")
theme_override_font_sizes/font_size = 16
text = "Target"

[node name="Container" type="HBoxContainer" parent="Description/Target"]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[node name="Icon" type="TextureRect" parent="Description/Target/Container"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_wcjl7")

[node name="Value" type="Label" parent="Description/Target/Container"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_gemf7")
theme_override_font_sizes/font_size = 36
text = "650"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 233.0
offset_right = 71.0
offset_bottom = 253.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_c8pqy")
theme_override_font_sizes/font_size = 16
text = "Reward"

[node name="Reward" type="HFlowContainer" parent="."]
custom_minimum_size = Vector2(280, 0)
layout_mode = 0
offset_left = 80.0
offset_top = 228.0
offset_right = 137.0
offset_bottom = 260.0
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 0
last_wrap_alignment = 1

[node name="RewardDesc" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(270, 0)
layout_mode = 0
offset_left = 53.0
offset_top = 305.0
offset_right = 323.0
offset_bottom = 305.0

[node name="Choose" type="Button" parent="."]
custom_minimum_size = Vector2(300, 48)
layout_mode = 0
offset_left = 40.0
offset_top = -70.0
offset_right = 340.0
offset_bottom = -22.0
theme_override_fonts/font = ExtResource("10_xq4im")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_j21ch")
text = "Choose"

[node name="SelectFrame" type="LinkButton" parent="."]
layout_mode = 0
offset_left = -11.0
offset_top = -10.0
offset_right = 393.0
offset_bottom = 300.0

[connection signal="resized" from="Reward" to="." method="_on_reward_resized"]
[connection signal="pressed" from="Choose" to="." method="_on_choose_pressed"]
[connection signal="pressed" from="SelectFrame" to="." method="_on_select_frame_pressed"]
